fixing: high contrast changes

--- a/pages/private/style.css
+++ b/pages/private/style.css
@@ -29,7 +29,7 @@ body{
     display: flex;
     flex-direction: column;
 }
-nav.private-nav{
+/* nav.private-nav{
     display: flex;
     padding: 1rem;
     justify-content: center;
@@ -40,11 +40,11 @@ nav.private-nav{
         font-size: 1.25rem;
         line-height: calc(1.25rem + (1.25rem / 2));
         color: var(--text-color);
-        /* border-bottom:2px solid var(--cta-button); */
+        /* border-bottom:2px solid var(--cta-button);
     }
     border-bottom: 2px solid var(--secondary-color);
     background: var(--primary-color);
-}
+} */
 main.consulta-usuario {
     padding: 2rem;
     background-color: var(--secondary-color);
@@ -194,5 +194,7 @@ main.consulta-usuario{
     
     
     
-    
+}
+.m-l-auto {
+    margin-left: auto;
 }
